@@ -74,6 +74,12 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 8/24:</DIV>
+ There will be no quiz this first week.
+<li>
+<DIV class="updated">Posted 8/24:</DIV>
+ The first homework assignment is now available in the Assignments tab.
+<li>
 <DIV class="updated">Posted 8/20:</DIV>
  Welcome to Modern Physics!  Please click on the Syllabus button above to learn more about the course.
 </ul></div>
