@@ -1,1 +1,3 @@
+8/24: There will be no quiz this first week.
+8/24: The first homework assignment is now available in the Assignments tab.
 8/20: Welcome to Modern Physics!  Please click on the Syllabus button above to learn more about the course.
